adding hover effects

--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 <div class="bottom-nav">
     <ul>
         <li class="active-bottom nav-items" id="links"><span>CLUB LINKS</span><img src="img/up-arrow.svg"></li>
-        <li class="nav-items" id="teams">NFL CLUBS</li>
-        <li class="nav-items" id="sites">MORE NFL SITES</li>
+        <li class="nav-items" id="teams"><span>NFL CLUBS</span><img src="img/up-arrow.svg"></li>
+        <li class="nav-items" id="sites"><span>MORE NFL SITES</span><img src="img/up-arrow.svg"></li>
     </ul>
 </div> <!-- bottom-nav div end -->
 <div class="bottom-nav-info">
